# StudyLLM

./: README.md  pyproject.toml
src/intro_llm/: chapter1.ipynb  chapter2.ipynb
