[tool.poetry]
name = "study-lmm"
version = "0.1.0"
description = ""
authors = ["takutori <t.taichi.takutori.0214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = {extras = ["ja", "sentencepiece", "torch"], version = "^4.48.0"}
ipykernel = "^6.29.5"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
